tests/rosetta/out/C/approximate-equality.error
cc: exit status 1
/tmp/approximate-equality.c:63:8: error: conflicting types for ‘abs’; have ‘double(double)’
   63 | double abs(double x) {
      |        ^~~
In file included from /tmp/approximate-equality.c:4:
/usr/include/stdlib.h:980:12: note: previous declaration of ‘abs’ with type ‘int(int)’
  980 | extern int abs (int __x) __THROW __attribute__ ((__const__)) __wur;
      |            ^~~
/tmp/approximate-equality.c: In function ‘mochi_main’:
/tmp/approximate-equality.c:111:14: error: redefinition of ‘pairs’
  111 |   list_float pairs = list_float_create(2);
      |              ^~~~~
/tmp/approximate-equality.c:102:14: note: previous definition of ‘pairs’ with type ‘list_float’
  102 |   list_float pairs = list_float_create(2);
      |              ^~~~~
/tmp/approximate-equality.c:114:12: error: conflicting types for ‘pairs’; have ‘list_int’
  114 |   list_int pairs = list_int_create(2);
      |            ^~~~~
/tmp/approximate-equality.c:111:14: note: previous definition of ‘pairs’ with type ‘list_float’
  111 |   list_float pairs = list_float_create(2);
      |              ^~~~~
/tmp/approximate-equality.c:123:28: error: incompatible types when initializing type ‘int’ using type ‘list_float’
  123 |   list_int pairs_data[] = {tmp1,  tmp2,  pairs, tmp3, tmp4,
      |                            ^~~~
/tmp/approximate-equality.c:123:35: error: incompatible types when initializing type ‘int *’ using type ‘list_float’
  123 |   list_int pairs_data[] = {tmp1,  tmp2,  pairs, tmp3, tmp4,
      |                                   ^~~~
/tmp/approximate-equality.c:123:49: error: incompatible types when initializing type ‘int’ using type ‘list_float’
  123 |   list_int pairs_data[] = {tmp1,  tmp2,  pairs, tmp3, tmp4,
      |                                                 ^~~~
/tmp/approximate-equality.c:123:55: error: incompatible types when initializing type ‘int *’ using type ‘list_float’
  123 |   list_int pairs_data[] = {tmp1,  tmp2,  pairs, tmp3, tmp4,
      |                                                       ^~~~
/tmp/approximate-equality.c:124:42: error: incompatible types when initializing type ‘int’ using type ‘list_float’
  124 |                            pairs, pairs, tmp5,  tmp6};
      |                                          ^~~~
/tmp/approximate-equality.c:124:49: error: incompatible types when initializing type ‘int *’ using type ‘list_float’
  124 |                            pairs, pairs, tmp5,  tmp6};
      |                                                 ^~~~
/tmp/approximate-equality.c:125:17: error: conflicting types for ‘pairs’; have ‘list_list_int’
  125 |   list_list_int pairs = {9, pairs_data};
      |                 ^~~~~
/tmp/approximate-equality.c:114:12: note: previous definition of ‘pairs’ with type ‘list_int’
  114 |   list_int pairs = list_int_create(2);
      |            ^~~~~
/tmp/approximate-equality.c:127:23: error: invalid initializer
  127 |     list_float pair = pairs.data[tmp7];
      |                       ^~~~~
