tests/rosetta/out/C/approximate-equality.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:23:50Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:23:50Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
double abs(double x) {
  if (x < 0.0) {
    return (-x);
  }
  return x;
}

double maxf(double a, double b) {
  if (a > b) {
    return a;
  }
  return b;
}

int isClose(double a, double b) {
  double relTol = 0.000000001;
  double t = abs(a - b);
  double u = relTol * maxf(abs(a), abs(b));
  return t <= u;
}

double sqrtApprox(double x) {
  double guess = x;
  int i = 0;
  while (i < 10) {
    guess = (guess + x / guess) / 2.0;
    i = i + 1;
  }
  return guess;
}

int mochi_main() {
  double root2 = sqrtApprox(2.0);
  list_float tmp1 = list_float_create(2);
  tmp1.data[0] = 100000000000000.02;
  tmp1.data[1] = 100000000000000.02;
  list_float tmp2 = list_float_create(2);
  tmp2.data[0] = 100.01;
  tmp2.data[1] = 100.011;
  list_float pairs = list_float_create(2);
  pairs.data[0] = 10000000000000.002 / 10000.0;
  pairs.data[1] = 1000000000.0000001;
  list_float tmp3 = list_float_create(2);
  tmp3.data[0] = 0.001;
  tmp3.data[1] = 0.0010000001;
  list_float tmp4 = list_float_create(2);
  tmp4.data[0] = 0.000000000000000000000101;
  tmp4.data[1] = 0.0;
  list_float pairs = list_float_create(2);
  pairs.data[0] = root2 * root2;
  pairs.data[1] = 2.0;
  list_int pairs = list_int_create(2);
  pairs.data[0] = ((-root2)) * root2;
  pairs.data[1] = (-2.0);
  list_float tmp5 = list_float_create(2);
  tmp5.data[0] = 100000000000000000.0;
  tmp5.data[1] = 100000000000000000.0;
  list_float tmp6 = list_float_create(2);
  tmp6.data[0] = 3.141592653589793;
  tmp6.data[1] = 3.141592653589793;
  list_int pairs_data[] = {tmp1,  tmp2,  pairs, tmp3, tmp4,
                           pairs, pairs, tmp5,  tmp6};
  list_list_int pairs = {9, pairs_data};
  for (int tmp7 = 0; tmp7 < 2; tmp7++) {
    list_float pair = pairs.data[tmp7];
    double a = pair.data[0];
    double b = pair.data[1];
    char *s = (isClose(a, b) ? "≈" : "≉");
    char *tmp8 = _str(a);
    char *tmp9 = concat_string(tmp8, " ");
    char *tmp10 = concat_string(tmp9, s);
    char *tmp11 = concat_string(tmp10, " ");
    char *tmp12 = _str(b);
    char *tmp13 = concat_string(tmp11, tmp12);
    printf("%s\n", tmp13);
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
